# docs/swagger.json
@@ -13,6 +13,29 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
+        "/spotify/get_featured_tracks": {
+            "get": {
+                "description": "Get the top featured tracks on Spotify",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Spotify"
+                ],
+                "summary": "Get featured tracks on Spotify",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/spotify.GetFeaturedTracksResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/spotify/search": {
             "post": {
                 "description": "Search for tracks on Spotify using a query string.",
@@ -49,6 +72,37 @@
         }
     },
     "definitions": {
+        "spotify.FeaturedTrack": {
+            "type": "object",
+            "properties": {
+                "artist": {
+                    "type": "string"
+                },
+                "image": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "source": {
+                    "type": "string"
+                },
+                "source_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "spotify.GetFeaturedTracksResponse": {
+            "type": "object",
+            "properties": {
+                "tracks": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/spotify.FeaturedTrack"
+                    }
+                }
+            }
+        },
         "spotify.SearchRequest": {
             "type": "object",
             "properties": {
